[package]
name = "hello_fltk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "ex01"
path = "src/ex01.rs"

[[bin]]
name = "cd"
path = "src/count_down.rs"


[dependencies]
fltk = { version = "^1.5", features = ["fltk-bundled"], git = "https://github.com/fltk-rs/fltk-rs" }
rodio = "0.20.1"
chrono ="0.4"
